--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -62,7 +62,7 @@ body {
   color: #353535;
   text-align: left;
   background-color: #F7F6F8;
-  
+
 }
 
 [tabindex="-1"]:focus {
@@ -10058,4 +10058,29 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
+}
+
+/* Ajustes finos
+Manter isso aqui? */
+.uppercase-label{
+  width: 82px;
+  height: 15px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: normal;
+  text-transform: uppercase;
+  color: #C8C8C8;
+}
+
+.header-form-label{
+  width: 240px;
+  height: 29px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: normal;
+  color: #353535;
 }
