--- a/src/components/Shareable/custom.css
+++ b/src/components/Shareable/custom.css
@@ -183,3 +183,44 @@ textarea {
   text-transform: uppercase;
   color: #c8c8c8;
 }
+
+.multiselect-wrapper-disabled .dropdown-heading {
+  pointer-events: none;
+  background-color: #e9ecef !important;
+}
+
+.multiselect-wrapper-disabled .dropdown .dropdown-heading
+.dropdown-heading-value span {
+  color: #5d515b !important;
+}
+
+.multiselect-wrapper-enabled .dropdown .dropdown-heading
+.dropdown-heading-value span {
+  color: #5d515b !important;
+}
+
+.week-circle {
+  height: 25px;
+  width: 25px;
+  padding-left: 7px;
+  margin-left: 5px;
+  color: #686868;
+  background-color: #fff;
+  border: 1px solid #E8E8E8;
+  border-radius: 50%;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.week-circle-clicked {
+  height: 25px;
+  width: 25px;
+  padding-left: 7px;
+  margin-left: 5px;
+  color: #fff;
+  background-color: #686868;
+  border: 1px solid #E8E8E8;
+  border-radius: 50%;
+  display: inline-block;
+  cursor: pointer;
+}
