Criado o reducer, action e service para permission

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -10062,6 +10062,7 @@ a.text-dark:hover, a.text-dark:focus {
   font-weight: bold;
   font-size: 24px;
   line-height: normal;
+  color: #353535;
 }
 
 .blockquote-sme {
