--- a/src/components/Shareable/custom.css
+++ b/src/components/Shareable/custom.css
@@ -106,6 +106,11 @@ textarea {
   color: #a8a8a8;
 }
 
+
+.DraftEditor-root {
+  z-index: 0;
+}
+
 div.react-datepicker-wrapper {
   margin-right: -30px;
 }
