--- a/src/components/Shareable/custom.css
+++ b/src/components/Shareable/custom.css
@@ -1,5 +1,9 @@
 /* Labels */
 
+label {
+  margin-bottom: 0 !important;
+}
+
 .subtitle {
   font-style: normal;
   font-weight: bold;
@@ -100,10 +104,68 @@ textarea {
   padding: 10px;
 }
 
+.checkbox-label input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkbox-label .checkbox-custom {
+  position: absolute;
+  top: 10px;
+  left: 0px;
+  height: 20px;
+  width: 20px;
+  background-color: #fff;
+  border-radius: 3px;
+  border: 1px solid #686868;
+  cursor: pointer;
+}
+
+.checkbox-label .checkbox-custom::after {
+  position: absolute;
+  content: "";
+  left: 12px;
+  top: 12px;
+  height: 0px;
+  width: 0px;
+  border-radius: 5px;
+  border: solid #009BFF;
+  border-width: 0 3px 3px 0;
+  transform: rotate(0deg) scale(0);
+  opacity: 1;
+}
+
+.checkbox-label input:checked ~ .checkbox-custom {
+  background-color: #fff;
+  border-radius: 5px;
+  transform: rotate(0deg) scale(1);
+  opacity: 1;
+  border: 1px solid #686868;
+}
+
+.checkbox-label input:checked ~ .checkbox-custom::after {
+  transform: rotate(45deg) scale(1);
+  opacity: 1;
+  left: 7px;
+  top: 2px;
+  width: 6px;
+  height: 12px;
+  border: solid #686868;
+  border-width: 0 2px 2px 0;
+  background-color: transparent;
+  border-radius: 0;
+}
+
 .fa-calendar {
   z-index: 1;
   padding-top: 12px;
   color: #a8a8a8;
+  position: relative;
+}
+
+.card-body {
+  padding: 2rem !important;
 }
 
 
