--- a/src/components/DahsboardEscola/style.css
+++ b/src/components/DahsboardEscola/style.css
@@ -10,3 +10,8 @@
 ::-webkit-input-placeholder { text-align:right; }
 /* mozilla solution */
 input:-moz-placeholder { text-align:right; }
+
+.card-body-sme {
+    padding: 0% !important;
+    max-height: 13rem;
+}
