--- a/src/components/Shareable/custom.css
+++ b/src/components/Shareable/custom.css
@@ -117,6 +117,11 @@ label {
   color: #353535;
 }
 
+.report-students-div {
+  display: grid;
+  font-size: 12px;
+}
+
 .progressbar-titles {
   list-style-type: none;
   text-align: center;
@@ -164,9 +169,18 @@ label {
 .progressbar li.disapproved:before {
   font-family: "Font Awesome 5 Free";
   font-size: 18px;
-  content: "\f057";
+  content: "\f05e";
   font-weight: 900;
   background-color: #C9251B;
+  color: #fff;
+}
+
+.progressbar li.cancelled:before {
+  font-family: "Font Awesome 5 Free";
+  font-size: 18px;
+  content: "\f057";
+  font-weight: 900;
+  background-color: #000;
   color: #fff;
 }
 
@@ -200,6 +214,14 @@ label {
 
 .progressbar li.active + li:after {
   background-color: green;
+}
+
+.Toastify__toast-container--top-center {
+  font-weight: 500;
+  font-size: 22px;
+  left: 15%;
+  min-width: 90%;
+  text-align: center;
 }
 
 table.report-table {
@@ -317,6 +339,8 @@ textarea {
   transform: rotate(0deg) scale(0);
   opacity: 1;
 }
+
+.modal-90w { max-width: 90% !important; }
 
 .checkbox-label input:checked ~ .checkbox-custom {
   background-color: #fff;
