--- a/src/components/Shareable/custom.css
+++ b/src/components/Shareable/custom.css
@@ -885,3 +885,9 @@ div.caption-choices span:nth-child(4) i {
   display: inline-block;
   cursor: pointer;
 }
+
+
+.button-botton-card {
+  display: flex;
+  justify-content: flex-end;
+}
