--- a/src/components/Shareable/custom.css
+++ b/src/components/Shareable/custom.css
@@ -4,6 +4,10 @@ label {
   margin-bottom: 0 !important;
 }
 
+input::placeholder {
+  text-align: left;
+}
+
 .breadcrumb-title {
   font-weight: bold;
   font-size: 12px;
@@ -526,6 +530,7 @@ input.input-search {
 }
 
 input.input-search::placeholder {
+  text-align: right;
   color: #a4a4a4;
   padding-right: 5px;
 }
@@ -537,10 +542,6 @@ input.input-search::placeholder {
 
 .input-search-full-width input {
   margin-right: -30px;
-}
-
-.input-search-full-width input::placeholder {
-  text-align: left;
 }
 
 .current-date {
@@ -817,7 +818,16 @@ div.caption-choices span:nth-child(4) i {
 
 .orders-table tr th:nth-child(3),
 .orders-table tr td:nth-child(3) {
-  width: 80%;
+  width: 59%;
+}
+
+.orders-table tr td:nth-child(4) {
+  padding-left: 180px;
+  padding-right: 60px;
+}
+
+.orders-table tr th:nth-child(4){
+  padding-left: 107px;
 }
 
 .orders-table td {
