--- a/src/components/Shareable/style.scss
+++ b/src/components/Shareable/style.scss
@@ -1,3 +1,7 @@
+textarea {
+  min-height: 121px;
+}
+
 .dashboard-card-title {
   color: #035d96;
   i {
@@ -134,3 +138,80 @@ div.caption-choices {
   text-align: center;
 }
 
+table.table-lote {
+  th {
+    font-weight: normal;
+    font-size: 12px;
+    color: #a8a8a8;
+    &:nth-child(2) {
+      padding-left: 120px;
+    }
+  }
+  td {
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 12px;
+    color: #853cb6;
+    &:nth-child(2) {
+      padding-left: 120px;
+    }
+  }
+}
+
+//modal
+.modal-90w {
+  max-width: 90% !important;
+}
+
+.checkbox-label {
+  input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    &:checked {
+      ~ .checkbox-custom {
+        background-color: #fff;
+        border-radius: 5px;
+        transform: rotate(0deg) scale(1);
+        opacity: 1;
+        border: 1px solid #686868;
+        &:after {
+          transform: rotate(45deg) scale(1);
+          opacity: 1;
+          left: 7px;
+          top: 2px;
+          width: 6px;
+          height: 12px;
+          border: solid #686868;
+          border-width: 0 2px 2px 0;
+          background-color: transparent;
+          border-radius: 0;
+        }
+      }
+    }
+  }
+  .checkbox-custom {
+    position: absolute;
+    top: 10px;
+    left: 0px;
+    height: 20px;
+    width: 20px;
+    background-color: #fff;
+    border-radius: 3px;
+    border: 1px solid #686868;
+    cursor: pointer;
+    &:after {
+      position: absolute;
+      content: "";
+      left: 12px;
+      top: 12px;
+      height: 0px;
+      width: 0px;
+      border-radius: 5px;
+      border: solid #009bff;
+      border-width: 0 3px 3px 0;
+      transform: rotate(0deg) scale(0);
+      opacity: 1;
+    }
+  }
+}
