--- a/src/components/Shareable/labelAndInput/style.scss
+++ b/src/components/Shareable/labelAndInput/style.scss
@@ -33,3 +33,12 @@ div.react-datepicker-wrapper {
 .DraftEditor-root {
   z-index: 0;
 }
+
+.session-header {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: normal;
+  color: #686868;
+}
