--- a/src/components/Shareable/CardLogo/style.scss
+++ b/src/components/Shareable/CardLogo/style.scss
@@ -1,4 +1,6 @@
+
 .card-logo {
+  height: 218px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -29,5 +31,4 @@
     font-weight: bold;
     text-align: center;
   }
-
 }
