--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -1,12 +1,20 @@
 .linked-card {
   a {
-    color: #A8A8A8;
+    color: #a8a8a8;
   }
 }
 
-.cadastro {
-  .col-sm-12, .col-xs-12, .col-md-12, .col-lg-12 {
+.cadastro, .modal-cadastro-lote {
+  .col-sm-12,
+  .col-xs-12,
+  .col-md-12,
+  .col-lg-12 {
     padding: 0;
+  }
+  ul.select-list {
+    li {
+      background-color: #035d96;
+    }
   }
   label {
     &.label {
@@ -14,13 +22,34 @@
       font-size: 14px;
       color: #686868;
       span {
-        color: #C9251B;
+        color: #c9251b;
       }
     }
     &.link {
       cursor: pointer;
       font-weight: bold;
-      color: #035D96;
+      color: #035d96;
+    }
+    &.label-selected-unities {
+      font-weight: normal;
+      font-size: 12px;
+    }
+  }
+  .value-selected-unities {
+    padding-top: 10px;
+    font-weight: bold;
+    font-size: 12px;
+    color: #353535;
+  }
+}
+
+.modal-cadastro-lote {
+  p {
+    font-size: 14px;
+    color: #686868;
+    margin-bottom: 0;
+    &:first-child {
+      font-weight: bold;
     }
   }
 }
