--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -4,7 +4,8 @@
   }
 }
 
-.cadastro, .modal-cadastro-lote {
+.cadastro,
+.modal-cadastro-lote {
   .col-sm-12,
   .col-xs-12,
   .col-md-12,
@@ -51,5 +52,78 @@
     &:first-child {
       font-weight: bold;
     }
+  }
+}
+
+.card-body {
+  &.card-table-cadastro {
+    padding: 0 !important;
+  }
+}
+
+table.cadastro {
+  width: 100%;
+  th {
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 0.01em;
+    color: #686868;
+    border-bottom: 2px solid #a8a8a8;
+    padding-bottom: 10px;
+    &:first-child {
+      padding-left: 20px;
+    }
+  }
+  td {
+    font-size: 14px;
+    color: #707683;
+    padding: 15px 0;
+    border-bottom: 1px solid #ebeff2;
+    &:first-child {
+      padding-left: 20px;
+      width: 50%;
+      font-weight: bold;
+    }
+    &:nth-child(2){
+      width: 19%;
+    }
+
+    &:nth-child(4) {
+      text-align: center;
+    }
+  }
+  tr.relationed-company-title {
+    background: #f2fbfe;
+    td {
+      font-weight: 600;
+      font-size: 14px;
+      color: #686868;
+      padding: 10px 0 0 0;
+      border: none;
+      &:first-child {
+        padding-left: 20px;
+      }
+    }
+  }
+  tr.relationed-companies {
+    background: #f2fbfe;
+    td {
+      font-weight: bold;
+      font-size: 14px;
+      color: #353535;
+      border: none;
+      padding: 10px 0;
+      span {
+        font-weight: 600;
+        color: #707683;
+      }
+      &:first-child {
+        padding-left: 20px;
+      }
+      &.last-item {
+        padding-bottom: 30px;
+      }
+    }
+
   }
 }
