--- a/src/components/screens/Configuracoes/style.scss
+++ b/src/components/screens/Configuracoes/style.scss
@@ -14,5 +14,27 @@
     input {
       background-color: #e8e8e8;
     }
+    .cancel-notification {
+      position: relative;
+      height: 40px;
+      width: 157px;
+      background: #eeeeee;
+      border: 1px solid #dadada;
+      box-sizing: border-box;
+      border-radius: 3px;
+      label {
+        padding-top: 12px;
+        padding-left: 30px;
+        display: flex;
+        justify-content: center;
+        font-size: 10px;
+        color: #42474a;
+      }
+      .checkbox-label {
+        .checkbox-custom {
+          margin-left: 12px;
+        }
+      }
+    }
   }
 }
