--- a/src/components/Shareable/labelAndInput/style.scss
+++ b/src/components/Shareable/labelAndInput/style.scss
@@ -57,8 +57,13 @@ div.react-datepicker-wrapper {
     cursor: pointer;
     &.used {
       background: #f8f5f5;
-      color: #A8A8A8;
+      color: #a8a8a8;
       border: 1px solid #dadada;
     }
   }
+}
+
+.wrapper-class {
+  display: flex;
+  flex-direction: column-reverse;
 }
