--- a/src/components/Shareable/style.scss
+++ b/src/components/Shareable/style.scss
@@ -14,7 +14,6 @@ textarea {
   padding: 2rem !important;
 }
 
-
 input.input-search {
   border-top: none;
   border-left: none;
@@ -248,6 +247,24 @@ table.table-lote {
       border-width: 0 3px 3px 0;
       transform: rotate(0deg) scale(0);
       opacity: 1;
+    }
+  }
+}
+
+.btn-styled {
+  height: 40px;
+  width: 160px;
+  &.btn-primary {
+    background-color: #035d96;
+    &:hover {
+      background-color: #035d96;
+    }
+  }
+  &.btn-outline-primary {
+    color: #035d96;
+    &:hover {
+      background-color: white;
+      color: #035d96;
     }
   }
 }
