todas as paginas com o componente page, rotas em portugues e outros ajustes

--- a/src/components/Main/sidebar.css
+++ b/src/components/Main/sidebar.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F7F6F8 !important;
+  background-color: #f7f6f8 !important;
 }
 
 .navbar-sme {
@@ -7,8 +7,8 @@ body {
 }
 
 .bg-gradiente-sme {
-  background-color: #8BC34A;
-  background: linear-gradient(45deg, #388E3C 0%, #8BC34A 100%);
+  background-color: #8bc34a;
+  background: linear-gradient(45deg, #388e3c 0%, #8bc34a 100%);
   box-shadow: 6px 0px 18px rgba(0, 0, 0, 0.15);
   background-size: cover;
   margin-left: -15px;
