--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -117,6 +117,7 @@ table.cadastro {
   tr.relationed-companies {
     background: #f2fbfe;
     td {
+      background: #f2fbfe;
       font-weight: bold;
       font-size: 14px;
       color: #353535;
@@ -134,6 +135,30 @@ table.cadastro {
       }
     }
 
+  }
+}
+
+
+
+.button-action {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.lotes_container{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  padding: 0 15px 10px 15px;
+
+  .drop-down-lotes{
+    width: 50%;
+    padding-right: 15px;
+  }
+  .select-lotes{
+    width: 50%;
+    padding-left: 15px;
   }
 }
 
@@ -166,25 +191,34 @@ table.cadastro-empresa {
     border-bottom: 1px solid #ebeff2;
     &:first-child {
       padding-left: 20px;
-      width: 10%;
+      width: 8%;
       font-weight: bold;
-    }
-    &:nth-child(2){
-      width: 40%;
-    }
-    &:nth-child(3){
-      width: 20%;
     }
 
     &:nth-child(4) {
-      width: 20%;
+      text-align: center;
     }
-
-    &:nth-child(5){
+    &:nth-child(5) {
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
+      padding-right: 20%;
     }
   }
+
+  .nome-empresa {
+    width: auto;
+    font-weight: bold;
+  }
+
+  .descricao {
+    font-weight: bold;
+    padding-right: 10px;
+  }
+  .valor-desc {
+    font-weight: bold;
+    color: #353535;
+  }
+
   tr.relationed-company-title {
     background: #f2fbfe;
     td {
@@ -198,33 +232,46 @@ table.cadastro-empresa {
       }
     }
   }
-  tr.relationed-companies {
-    background: #f2fbfe;
+  .detalhe-empresa {
+    background-color: #f2fbfe;
+    font-weight: bold;
+
     td {
-      font-weight: bold;
-      font-size: 14px;
-      color: #353535;
-      border: none;
-      padding: 10px 0;
-      span {
-        font-weight: 600;
-        color: #707683;
-      }
-      &:first-child {
-        padding-left: 20px;
-      }
-      &.last-item {
-        padding-bottom: 30px;
+      border: 0px;
+      color: #000;
+    }
+  }
+  tr{
+    td.container-detalhe {
+      background: #f2fbfe;
+      padding: 15px 20px 15px 0px;
+      div.container-info {
+        display: grid;
+        grid-template-columns:  46% 54%; 
+        grid-template-rows: 20% 20% 20% 20% 20%;  
+
+             
+        div:not(:first-child):not(:nth-child(1)){
+          padding: 10px 0 5px;
+        }
+
+        div ul {
+          list-style: none;
+          padding: 0;
+        }
+
+        li{
+          font-weight: bold;
+          color: #353535;
+        }
       }
     }
-
   }
+
+  
 }
 
-.button-container{
-  display: flex;
-  justify-content: flex-end;
-}
+
 
 .button-action {
   display: flex;
@@ -247,3 +294,4 @@ table.cadastro-empresa {
     padding-left: 15px;
   }
 }
+
