botao imprimir e style do selecionar todos

--- a/src/components/Shareable/style.scss
+++ b/src/components/Shareable/style.scss
@@ -288,4 +288,15 @@ div.caption-choices {
 .BurgerBox {
   width: 18px !important;
   line-height: 3px;
+  .BurgerInner {
+    height: 3px;
+    &:before {
+      top: -7px;
+      height: 3px;
+    }
+    &:after {
+      bottom: -7px;
+      height: 3px;
+    }
+  }
 }
