--- a/src/components/Shareable/labelAndInput/style.scss
+++ b/src/components/Shareable/labelAndInput/style.scss
@@ -2,23 +2,50 @@ div.react-datepicker-wrapper {
   margin-right: -30px;
 }
 
-.active-calendar {
-  > i {
-    color: #2881bb;
+.input-group {
+  input {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
   }
-  > .input-group-prepend {
-    > .input-group-text {
+  &.calendar {
+    display: -webkit-inline-box;
+    .input-group-prepend {
+      margin-top: 2px;
+      .input-group-text {
+        display: block;
+        text-align: center;
+        min-width: 140px;
+      }
+    }
+  }
+  &.active-calendar {
+    display: -webkit-inline-box;
+    i {
+      color: #2881bb;
+    }
+    input {
+      border: none;
+    }
+    .input-group-prepend {
+      margin-top: 1px;
+      .input-group-text {
+        display: block;
+        min-width: 140px;
+        text-align: center;
+        background: #e4f1ff;
+        border: 1px solid #2881bb;
+        color: #2881bb;
+      }
+    }
+    .react-datepicker__input-container {
       background: #e4f1ff;
       border: 1px solid #2881bb;
       color: #2881bb;
-    }
-  }
-  > .react-datepicker-wrapper {
-    background: #e4f1ff;
-    border: 1px solid #2881bb;
-    color: #2881bb;
-    .form-control {
-      color: #2881bb;
+      border-top-right-radius: 6px;
+      border-bottom-right-radius: 6px;
+      .form-control {
+        color: #2881bb;
+      }
     }
   }
 }
